diff between 2 Unsafe classes